test/regress/regress-33.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(data "\d")
(;; STDERR ;;;
out/test/regress/regress-33.txt:3:8: error: bad escape "\d"
(data "\d")
       ^^
out/test/regress/regress-33.txt:3:2: error: passive data segments are not allowed
(data "\d")
 ^^^^
;;; STDERR ;;)
